--- a/home.html
+++ b/home.html
@@ -3,196 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube UI Clone</title>
+    <title>UPSChub.video - Home</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-
-        header {
-            display: flex;
-            align-items: center;
-            background-color: #ff0000;
-            color: white;
-            padding: 10px 20px;
-            border-bottom: 2px solid #ccc;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            margin-right: 20px;
-        }
-
-        .search-bar {
-            flex: 1;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-        }
-
-        .user-icon {
-            margin-left: 20px;
-            padding: 10px;
-            background-color: #e0e0e0;
-            border-radius: 50%;
-            color: #333;
-        }
-
-        .container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        main {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .video-card {
-            width: 300px;
-            margin: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            overflow: hidden;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .video-card img {
-            width: 100%;
-        }
-
-        .video-card h3 {
-            font-size: 18px;
-            margin: 10px;
-            color: #333;
-        }
-
-        .video-card p {
-            margin: 0 10px 10px;
-            color: #555;
-        }
-
-        .button-container {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .button-container a {
-            display: inline-block;
-            background-color: #ff0000;
-            color: white;
-            padding: 10px 20px;
-            margin: 5px;
-            border-radius: 4px;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .button-container a:hover {
-            background-color: #cc0000;
-        }
-
         footer {
-            background-color: #ff0000;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        .footer-links {
-            margin: 10px 0;
-        }
-
-        .footer-links a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-
-        .footer-links a:hover {
-            text-decoration: underline;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            font-size: 12px;
+            padding: 5px 0;
         }
     </style>
 </head>
-<body>
-    <header>
-        <div class="logo">UPSCvideo HUB</div>
-        <input type="text" class="search-bar" placeholder="Search">
-        <div class="user-icon">User </div>
-    </header>
-    <div class="container">
-        <main>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 1</h3>
-                <p>Channel Name</p>
+<body class="bg-gray-100 p-5">
+    <div class="max-w-6xl mx-auto">
+        <h1 class="text-3xl font-bold text-center mb-6">UPSChub.video</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
+            <div class='bg-white shadow-md rounded-lg p-5'>
+                <h2 class='text-xl font-semibold mb-2'>1. History</h2>
+                <p class='text-gray-600'>Explore videos on History to enhance your knowledge.</p>
+                <a href='history.html' class='mt-3 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'>View Details</a>
             </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 2</h3>
-                <p>Channel Name</p>
+            <div class='bg-white shadow-md rounded-lg p-5'>
+                <h2 class='text-xl font-semibold mb-2'>2. Geography</h2>
+                <p class='text-gray-600'>Explore videos on Geography to enhance your knowledge.</p>
+                <a href='geography.html' class='mt-3 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'>View Details</a>
             </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 3</h3>
-                <p>Channel Name</p>
+            <div class='bg-white shadow-md rounded-lg p-5'>
+                <h2 class='text-xl font-semibold mb-2'>3. Polity</h2>
+                <p class='text-gray-600'>Explore videos on Polity to enhance your knowledge.</p>
+                <a href='polity.html' class='mt-3 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'>View Details</a>
             </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                                <h3>Video Title 4</h3>
-                <p>Channel Name</p>
+            <div class='bg-white shadow-md rounded-lg p-5'>
+                <h2 class='text-xl font-semibold mb-2'>4. Economics</h2>
+                <p class='text-gray-600'>Explore videos on Economics to enhance your knowledge.</p>
+                <a href='economics.html' class='mt-3 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'>View Details</a>
             </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 5</h3>
-                <p>Channel Name</p>
+            <div class='bg-white shadow-md rounded-lg p-5'>
+                <h2 class='text-xl font-semibold mb-2'>5. Science & Tech</h2>
+                <p class='text-gray-600'>Explore videos on Science & Tech to enhance your knowledge.</p>
+                <a href='science_tech.html' class='mt-3 inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'>View Details</a>
             </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 6</h3>
-                <p>Channel Name</p>
-            </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 7</h3>
-                <p>Channel Name</p>
-            </div>
-            <div class="video-card">
-                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 8</h3>
-                <p>Channel Name</p>
-            </div>
-        </main>
-        <div class="button-container">
-            <a href="#">Page 1</a>
-            <a href="#">Page 2</a>
-            <a href="#">Page 3</a>
-            <a href="#">Page 4</a>
-            <a href="#">Page 5</a>
         </div>
-        <footer>
-            <div class="footer-links">
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-            </div>
-            <p>&copy; 2023 YouTube Clone. All rights reserved.</p>
-        </footer>
     </div>
+    <footer class="bg-gray-800 text-white text-center py-2 text-sm">
+        <p>&copy; 2025 UPSChub.video. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
