--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
             padding: 10px;
             position: fixed;
             bottom: 0;
+            left: 0;
             width: 100%;
             z-index: 1000;
         }
@@ -48,6 +49,7 @@
             flex-direction: column;
             justify-content: space-between;
             padding-bottom: 80px;
+            margin: 0;
         }
     </style>
 </head>
@@ -84,9 +86,9 @@
     </div>
     
     <div class="menu-bar">
-        <button onclick="window.location.href='home.html'">
+        <button onclick="window.location.href='index.html'">
             <img src="images/home.jpg" alt="Home">
-            Home
+            Index
         </button>
         <button onclick="window.location.href='playlist.html'">
             <img src="images/Playlist.jpg" alt="Video Playlist">
