--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             color: white;
             padding: 6px;
             position: fixed;
-            bottom: 0;
+            bottom: 20px;
             left: 0;
             width: 100%;
             z-index: 1000;
@@ -37,18 +37,20 @@
         footer {
             width: 100%;
             font-size: 10px;
-            padding: 2px 0;
+            padding: 5px 0;
             background: #222;
             color: white;
             text-align: center;
-            position: relative;
+            position: fixed;
+            bottom: 0;
+            left: 0;
         }
         body {
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding-bottom: 60px;
+            padding-bottom: 80px;
             margin: 0;
         }
     </style>
