--- a/index.html
+++ b/index.html
@@ -57,96 +57,114 @@
                 transform: translateX(-100%);
             }
         }
-        .spinner-container {
-            position: fixed;
-            top: 90px;
-            left: 20px;
-            z-index: 1001;
-        }
-        .spinner {
-            width: 1.5em;
-            height: 1.5em;
-            cursor: not-allowed;
-            border-radius: 50%;
-            border: 2px solid #444;
-            box-shadow: -5px -5px 5px #6359f8, 0px -5px 5px 0px #9c32e2, 5px -5px 5px #f36896, 5px 0 5px #ff0b0b, 5px 5px 5px 0px #ff5500, 0 5px 5px 0px #ff9500, -5px 5px 5px 0px #ffb700;
-            animation: rot55 0.7s linear infinite;
-            position: relative;
-        }
-        .spinnerin {
-            border: 2px solid #444;
-            width: 0.75em;
-            height: 0.75em;
-            border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        @keyframes rot55 {
-            to {
-                transform: rotate(360deg);
-            }
+        .card {
+            --bg-color: #212121;
+            background-color: var(--bg-color);
+            padding: 0.8rem 1.5rem;
+            border-radius: 1.25rem;
+            text-align: center;
+            color: rgb(124, 124, 124);
+            font-family: "Poppins", sans-serif;
+            font-weight: 500;
+            font-size: 20px;
         }
         .loader {
             display: flex;
-            font-size: 24px;
-            font-weight: bold;
+            flex-direction: column;
+            align-items: center;
+        }
+        .words {
+            overflow: hidden;
+            position: relative;
+            height: 25px;
+        }
+        .words::after {
+            content: "";
             position: absolute;
+            inset: 0;
+            background: linear-gradient(var(--bg-color) 10%, transparent 30%, transparent 70%, var(--bg-color) 90%);
+            z-index: 20;
         }
-        .hidden {
-            display: none;
+        .word {
+            display: block;
+            height: 100%;
+            color: #956afa;
+            animation: spin_4991 4s infinite;
         }
-        @keyframes pass {
-            0% { opacity: 1; }
-            50% { opacity: 0; }
-            100% { opacity: 1; }
+        @keyframes spin_4991 {
+            10% { transform: translateY(-102%); }
+            25% { transform: translateY(-100%); }
+            35% { transform: translateY(-202%); }
+            50% { transform: translateY(-200%); }
+            60% { transform: translateY(-302%); }
+            75% { transform: translateY(-300%); }
+            85% { transform: translateY(-402%); }
+            100% { transform: translateY(-400%); }
         }
-        .l, .o, .a, .d, .i, .n, .g, .d1, .d2 {
-            color: black;
-            opacity: 0;
-            animation: pass 2s ease-in-out infinite;
-            letter-spacing: 0.5em;
-            text-shadow: 2px 2px 3px #919191;
+        .menu-bar {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            background: #444;
+            color: white;
+            padding: 5px;
+            position: fixed;
+            bottom: 50px;
+            width: 90%;
+            left: 5%;
+            border-radius: 10px;
+            z-index: 1000;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
-        .o { animation-delay: 0.2s; }
-        .a { animation-delay: 0.4s; }
-        .d { animation-delay: 0.6s; }
-        .i { animation-delay: 0.8s; }
-        .n { animation-delay: 1s; }
-        .g { animation-delay: 1.2s; }
-        .d1 { animation-delay: 1.4s; }
-        .d2 { animation-delay: 1.6s; }
+        .menu-bar button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 12px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .menu-bar img {
+            width: 20px;
+            height: 20px;
+            margin-bottom: 2px;
+        }
     </style>
-    <script>
-        function showWelcome() {
-            document.getElementById('loader').classList.add('hidden');
-            document.getElementById('welcome').classList.remove('hidden');
-        }
-        setTimeout(showWelcome, 5000);
-    </script>
 </head>
 <body>
     <header>UPSC Hub - Video Platform</header>
     <div class="runner-banner"><div>"Stay focused and keep learning! UPSC Hub is with you on this journey."</div></div>
-    <div class="spinner-container">
-        <div class="spinner">
-            <div class="spinnerin"></div>
+    <div class="card">
+        <div class="loader">
+            <p>UPSC through</p>
+            <div class="words">
+                <span class="word">Hardwork</span>
+                <span class="word">Motivation</span>
+                <span class="word">Discipline</span>
+                <span class="word">Consistancy</span>
+                <span class="word">Dedication</span>
+            </div>
         </div>
     </div>
-    <div id="loader" class="loader">
-        <span class="l">L</span>
-        <span class="o">o</span>
-        <span class="a">a</span>
-        <span class="d">d</span>
-        <span class="i">i</span>
-        <span class="n">n</span>
-        <span class="g">g</span>
-        <span class="d1">.</span>
-        <span class="d2">.</span>
-    </div>
-    <div id="welcome" class="hidden">
-        <p>Welcome to UPSC Hub!</p>
+    <div class="menu-bar">
+        <button onclick="window.location.href='home.html'">
+            <img src="images/home.jpg" alt="Home">
+            Home
+        </button>
+        <button onclick="window.location.href='playlist.html'">
+            <img src="images/Playlist.jpg" alt="Video Playlist">
+            Playlist
+        </button>
+        <button onclick="window.location.href='shorts.html'">
+            <img src="images/shorts.jpg" alt="Shorts">
+            Shorts
+        </button>
+        <button onclick="window.location.href='settings.html'">
+            <img src="images/settings.jpg" alt="Settings">
+            Settings
+        </button>
     </div>
 </body>
 </html>
