--- a/index.html
+++ b/index.html
@@ -57,32 +57,25 @@
                 transform: translateX(-100%);
             }
         }
-        .card {
-            --bg-color: #212121;
-            background-color: var(--bg-color);
-            padding: 0.8rem 1.5rem;
-            border-radius: 1.25rem;
-            text-align: center;
-            color: rgb(124, 124, 124);
+        .loader {
+            display: flex;
+            align-items: center;
             font-family: "Poppins", sans-serif;
             font-weight: 500;
             font-size: 20px;
-        }
-        .loader {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            color: rgb(124, 124, 124);
         }
         .words {
             overflow: hidden;
             position: relative;
             height: 25px;
+            margin-left: 5px;
         }
         .words::after {
             content: "";
             position: absolute;
             inset: 0;
-            background: linear-gradient(var(--bg-color) 10%, transparent 30%, transparent 70%, var(--bg-color) 90%);
+            background: linear-gradient(#f4f4f4 10%, transparent 30%, transparent 70%, #f4f4f4 90%);
             z-index: 20;
         }
         .word {
@@ -131,21 +124,30 @@
             height: 20px;
             margin-bottom: 2px;
         }
+        footer {
+            background: #222;
+            color: white;
+            text-align: center;
+            padding: 5px;
+            font-size: 12px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
     <header>UPSC Hub - Video Platform</header>
     <div class="runner-banner"><div>"Stay focused and keep learning! UPSC Hub is with you on this journey."</div></div>
-    <div class="card">
-        <div class="loader">
-            <p>UPSC through</p>
-            <div class="words">
-                <span class="word">Hardwork</span>
-                <span class="word">Motivation</span>
-                <span class="word">Discipline</span>
-                <span class="word">Consistancy</span>
-                <span class="word">Dedication</span>
-            </div>
+    <div class="loader">
+        <p>UPSC through</p>
+        <div class="words">
+            <span class="word">Hardwork</span>
+            <span class="word">Motivation</span>
+            <span class="word">Discipline</span>
+            <span class="word">Consistancy</span>
+            <span class="word">Dedication</span>
         </div>
     </div>
     <div class="menu-bar">
@@ -166,5 +168,8 @@
             Settings
         </button>
     </div>
+    <footer>
+        <p>&copy; 2025 UPSC Hub - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
