--- a/index.html
+++ b/index.html
@@ -94,46 +94,51 @@
             85% { transform: translateY(-402%); }
             100% { transform: translateY(-400%); }
         }
-        .menu-bar {
+        .loading {
+            --speed-of-animation: 0.9s;
+            --gap: 6px;
+            --first-color: #4c86f9;
+            --second-color: #49a84c;
+            --third-color: #f6bb02;
+            --fourth-color: #f6bb02;
+            --fifth-color: #2196f3;
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             align-items: center;
-            background: #444;
-            color: white;
-            padding: 5px;
-            position: fixed;
-            bottom: 50px;
-            width: 90%;
-            left: 5%;
-            border-radius: 10px;
-            z-index: 1000;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            width: 100px;
+            gap: 6px;
+            height: 100px;
+            margin-top: 20px;
         }
-        .menu-bar button {
-            background: none;
-            border: none;
-            color: white;
-            font-size: 12px;
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        .loading span {
+            width: 4px;
+            height: 50px;
+            background: var(--first-color);
+            animation: scale var(--speed-of-animation) ease-in-out infinite;
         }
-        .menu-bar img {
-            width: 20px;
-            height: 20px;
-            margin-bottom: 2px;
+        .loading span:nth-child(2) {
+            background: var(--second-color);
+            animation-delay: -0.8s;
         }
-        footer {
-            background: #222;
-            color: white;
-            text-align: center;
-            padding: 5px;
-            font-size: 12px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            z-index: 1000;
+        .loading span:nth-child(3) {
+            background: var(--third-color);
+            animation-delay: -0.7s;
+        }
+        .loading span:nth-child(4) {
+            background: var(--fourth-color);
+            animation-delay: -0.6s;
+        }
+        .loading span:nth-child(5) {
+            background: var(--fifth-color);
+            animation-delay: -0.5s;
+        }
+        @keyframes scale {
+            0%, 40%, 100% {
+                transform: scaleY(0.05);
+            }
+            20% {
+                transform: scaleY(1);
+            }
         }
     </style>
 </head>
@@ -150,26 +155,12 @@
             <span class="word">Dedication</span>
         </div>
     </div>
-    <div class="menu-bar">
-        <button onclick="window.location.href='home.html'">
-            <img src="images/home.jpg" alt="Home">
-            Home
-        </button>
-        <button onclick="window.location.href='playlist.html'">
-            <img src="images/Playlist.jpg" alt="Video Playlist">
-            Playlist
-        </button>
-        <button onclick="window.location.href='shorts.html'">
-            <img src="images/shorts.jpg" alt="Shorts">
-            Shorts
-        </button>
-        <button onclick="window.location.href='settings.html'">
-            <img src="images/settings.jpg" alt="Settings">
-            Settings
-        </button>
+    <div class="loading">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-    <footer>
-        <p>&copy; 2025 UPSC Hub - All Rights Reserved</p>
-    </footer>
 </body>
 </html>
