--- a/index.html
+++ b/index.html
@@ -140,6 +140,47 @@
                 transform: scaleY(1);
             }
         }
+        .menu-bar {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            background: #444;
+            color: white;
+            padding: 5px;
+            position: fixed;
+            bottom: 50px;
+            width: 90%;
+            left: 5%;
+            border-radius: 10px;
+            z-index: 1000;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+        .menu-bar button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 12px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .menu-bar img {
+            width: 20px;
+            height: 20px;
+            margin-bottom: 2px;
+        }
+        footer {
+            background: #222;
+            color: white;
+            text-align: center;
+            padding: 5px;
+            font-size: 12px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
@@ -162,5 +203,14 @@
         <span></span>
         <span></span>
     </div>
+    <div class="menu-bar">
+        <button onclick="window.location.href='home.html'"><img src="images/home.jpg" alt="Home">Home</button>
+        <button onclick="window.location.href='playlist.html'"><img src="images/Playlist.jpg" alt="Video Playlist">Playlist</button>
+        <button onclick="window.location.href='shorts.html'"><img src="images/shorts.jpg" alt="Shorts">Shorts</button>
+        <button onclick="window.location.href='settings.html'"><img src="images/settings.jpg" alt="Settings">Settings</button>
+    </div>
+    <footer>
+        <p>&copy; 2025 UPSC Hub - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
