--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <button onclick="window.location.href='home.html'"><img src="images/home.jpg" alt="Home">Home</button>
         <button onclick="window.location.href='playlist.html'"><img src="images/Playlist.jpg" alt="Video Playlist">Playlist</button>
         <button onclick="window.location.href='shorts.html'"><img src="images/shorts.jpg" alt="Shorts">Shorts</button>
-        <button onclick="window.location.href='setting.js'"><img src="images/settings.jpg" alt="Settings">Settings</button>
+        <button onclick="window.location.href='settings.html'"><img src="images/settings.jpg" alt="Settings">Settings</button>
     </div>
     <footer>
         <p>&copy; 2025 UPSC Hub - All Rights Reserved</p>
