--- a/index.html
+++ b/index.html
@@ -1,216 +1,125 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UPSC Hub - Video Platform</title>
+    <title>BSc. Physics Notes</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        /* --- THEME DEFINITIONS (CSS Variables) --- */
+        :root {
+            --bg-color: #f8f9fa; --card-bg: #ffffff; --primary-accent: #0d6efd; --text-primary: #212529; --text-secondary: #6c757d; --border-color: #dee2e6; --shadow-color: rgba(0, 0, 0, 0.05); --header-bg: rgba(255, 255, 255, 0.85); --quote-bg: linear-gradient(45deg, #0d6efd, #0759d3);
         }
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            overflow: hidden;
-            justify-content: center;
-            align-items: center;
+        body.dark-mode {
+            --bg-color: #121212; --card-bg: #1e1e1e; --primary-accent: #3b82f6; --text-primary: #e5e7eb; --text-secondary: #9ca3af; --border-color: #374151; --shadow-color: rgba(0, 0, 0, 0.2); --header-bg: rgba(30, 30, 30, 0.85); --quote-bg: linear-gradient(45deg, #1f2937, #111827);
         }
-        header {
-            background: #333;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 24px;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-        .runner-banner {
-            background: #ffcc00;
-            color: black;
-            padding: 5px;
-            font-size: 14px;
-            position: fixed;
-            top: 60px;
-            width: 100%;
-            z-index: 999;
-            font-weight: bold;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-        .runner-banner div {
-            display: inline-block;
-            white-space: nowrap;
-            animation: marquee 10s linear infinite;
-        }
-        @keyframes marquee {
-            from {
-                transform: translateX(100%);
-            }
-            to {
-                transform: translateX(-100%);
-            }
-        }
-        .loader {
-            display: flex;
-            align-items: center;
-            font-family: "Poppins", sans-serif;
-            font-weight: 500;
-            font-size: 20px;
-            color: rgb(124, 124, 124);
-        }
-        .words {
-            overflow: hidden;
-            position: relative;
-            height: 25px;
-            margin-left: 5px;
-        }
-        .words::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: linear-gradient(#f4f4f4 10%, transparent 30%, transparent 70%, #f4f4f4 90%);
-            z-index: 20;
-        }
-        .word {
-            display: block;
-            height: 100%;
-            color: #956afa;
-            animation: spin_4991 4s infinite;
-        }
-        @keyframes spin_4991 {
-            10% { transform: translateY(-102%); }
-            25% { transform: translateY(-100%); }
-            35% { transform: translateY(-202%); }
-            50% { transform: translateY(-200%); }
-            60% { transform: translateY(-302%); }
-            75% { transform: translateY(-300%); }
-            85% { transform: translateY(-402%); }
-            100% { transform: translateY(-400%); }
-        }
-        .loading {
-            --speed-of-animation: 0.9s;
-            --gap: 6px;
-            --first-color: #4c86f9;
-            --second-color: #49a84c;
-            --third-color: #f6bb02;
-            --fourth-color: #f6bb02;
-            --fifth-color: #2196f3;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100px;
-            gap: 6px;
-            height: 100px;
-            margin-top: 20px;
-        }
-        .loading span {
-            width: 4px;
-            height: 50px;
-            background: var(--first-color);
-            animation: scale var(--speed-of-animation) ease-in-out infinite;
-        }
-        .loading span:nth-child(2) {
-            background: var(--second-color);
-            animation-delay: -0.8s;
-        }
-        .loading span:nth-child(3) {
-            background: var(--third-color);
-            animation-delay: -0.7s;
-        }
-        .loading span:nth-child(4) {
-            background: var(--fourth-color);
-            animation-delay: -0.6s;
-        }
-        .loading span:nth-child(5) {
-            background: var(--fifth-color);
-            animation-delay: -0.5s;
-        }
-        @keyframes scale {
-            0%, 40%, 100% {
-                transform: scaleY(0.05);
-            }
-            20% {
-                transform: scaleY(1);
-            }
-        }
-        .menu-bar {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            background: #444;
-            color: white;
-            padding: 5px;
-            position: fixed;
-            bottom: 50px;
-            width: 90%;
-            left: 5%;
-            border-radius: 10px;
-            z-index: 1000;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-        }
-        .menu-bar button {
-            background: none;
-            border: none;
-            color: white;
-            font-size: 12px;
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .menu-bar img {
-            width: 20px;
-            height: 20px;
-            margin-bottom: 2px;
-        }
-        footer {
-            background: #222;
-            color: white;
-            text-align: center;
-            padding: 5px;
-            font-size: 12px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            z-index: 1000;
-        }
+        /* --- GENERAL STYLES --- */
+        body { font-family: 'Poppins', sans-serif; margin: 0; background-color: var(--bg-color); color: var(--text-primary); display: flex; flex-direction: column; min-height: 100vh; transition: background-color 0.3s ease, color 0.3s ease; }
+        .container { width: 90%; max-width: 1100px; margin: 2rem auto; flex: 1; }
+        /* --- HEADER & CONTROLS --- */
+        header { background-color: var(--header-bg); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); padding: 1rem 5%; border-bottom: 1px solid var(--border-color); position: sticky; top: 0; z-index: 1000; transition: background-color 0.3s ease, border-color 0.3s ease; }
+        .header-content { display: flex; justify-content: space-between; align-items: center; }
+        header h1 { margin: 0; font-size: 1.75em; color: var(--primary-accent); }
+        .header-controls { display: flex; align-items: center; gap: 1.5rem; }
+        .datetime { font-size: 0.9em; text-align: right; color: var(--text-secondary); }
+        /* --- THEME SWITCHER TOGGLE --- */
+        .theme-switcher { position: relative; }
+        #theme-toggle { display: none; }
+        .slider { cursor: pointer; width: 50px; height: 26px; background-color: #ccc; border-radius: 26px; display: block; position: relative; transition: background-color 0.3s ease; }
+        .slider::before { content: ''; position: absolute; height: 20px; width: 20px; left: 3px; top: 3px; background-color: white; border-radius: 50%; transition: transform 0.3s ease; background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="orange" viewBox="0 0 16 16"><path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.414a.5.5 0 1 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707z"/></svg>'); background-size: 14px; background-repeat: no-repeat; background-position: center; }
+        #theme-toggle:checked + .slider { background-color: var(--primary-accent); }
+        #theme-toggle:checked + .slider::before { transform: translateX(24px); background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="lightblue" viewBox="0 0 16 16"><path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/></svg>'); }
+        /* --- QUOTE SLIDER --- */
+        .quote-slider { background: var(--quote-bg); color: white; text-align: center; padding: 1rem; }
+        #quote-text { margin: 0; font-style: italic; opacity: 1; transition: opacity 0.5s ease-in-out; }
+        #quote-text.fade-out { opacity: 0; }
+        /* --- SEMESTER GRID (HOME VIEW) --- */
+        .semester-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; }
+        .semester-box { display: block; text-decoration: none; background-color: var(--card-bg); border: 1px solid var(--border-color); border-radius: 12px; padding: 2rem; text-align: center; box-shadow: 0 4px 15px var(--shadow-color); transition: all 0.3s ease; }
+        .semester-box:hover { transform: translateY(-8px); border-color: var(--primary-accent); }
+        .semester-box h2 { margin-top: 0; color: var(--text-primary); }
+        .semester-box p { color: var(--text-secondary); }
+        /* --- FOOTER --- */
+        footer { text-align: center; padding: 1rem 0; margin-top: 2rem; font-size: 0.9em; color: var(--text-secondary); background-color: transparent; }
     </style>
 </head>
 <body>
-    <header>UPSC Hub - Video Platform</header>
-    <div class="runner-banner"><div>"Stay focused and keep learning! UPSC Hub is with you on this journey."</div></div>
-    <div class="loader">
-        <p>UPSC through</p>
-        <div class="words">
-            <span class="word">Hardwork</span>
-            <span class="word">Motivation</span>
-            <span class="word">Discipline</span>
-            <span class="word">Consistancy</span>
-            <span class="word">Dedication</span>
+
+    <header>
+        <div class="header-content">
+            <h1>BSc. Physics</h1>
+            <div class="header-controls">
+                <div id="datetime" class="datetime"></div>
+                <div class="theme-switcher">
+                    <input type="checkbox" id="theme-toggle">
+                    <label for="theme-toggle" class="slider"></label>
+                </div>
+            </div>
         </div>
+    </header>
+
+    <div class="quote-slider">
+        <p id="quote-text"></p>
     </div>
-    <div class="loading">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-    <div class="menu-bar">
-        <button onclick="window.location.href='home.html'"><img src="images/home.jpg" alt="Home">Home</button>
-        <button onclick="window.location.href='playlist.html'"><img src="images/Playlist.jpg" alt="Video Playlist">Playlist</button>
-        <button onclick="window.location.href='shorts.html'"><img src="images/shorts.jpg" alt="Shorts">Shorts</button>
-        <button onclick="window.location.href='settings.html'"><img src="images/settings.jpg" alt="Settings">Settings</button>
-    </div>
+
+    <main class="container">
+        <div class="semester-grid">
+            <a href="sem1.html" class="semester-box"><h2>Semester 1</h2><p>Click to view notes</p></a>
+            <a href="sem2.html" class="semester-box"><h2>Semester 2</h2><p>Click to view notes</p></a>
+            <a href="sem3.html" class="semester-box"><h2>Semester 3</h2><p>Click to view notes</p></a>
+            <a href="sem4.html" class="semester-box"><h2>Semester 4</h2><p>Click to view notes</p></a>
+            <a href="sem5.html" class="semester-box"><h2>Semester 5</h2><p>Click to view notes</p></a>
+            <a href="sem6.html" class="semester-box"><h2>Semester 6</h2><p>Click to view notes</p></a>
+        </div>
+    </main>
+
     <footer>
-        <p>&copy; 2025 UPSC Hub - All Rights Reserved</p>
+        <p>Created and Designed by Pratyush Swain</p>
     </footer>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // This script only needs to handle features on the home page.
+        const themeToggle = document.getElementById('theme-toggle');
+        const datetimeElement = document.getElementById('datetime');
+        const quoteTextElement = document.getElementById('quote-text');
+        
+        // Theme switcher logic
+        const currentTheme = localStorage.getItem('theme');
+        if (currentTheme === 'dark') {
+            document.body.classList.add('dark-mode');
+            themeToggle.checked = true;
+        }
+        themeToggle.addEventListener('change', () => {
+            document.body.classList.toggle('dark-mode');
+            localStorage.setItem('theme', themeToggle.checked ? 'dark' : 'light');
+        });
+
+        // Dynamic clock
+        const updateDateTime = () => {
+            const now = new Date();
+            const dateOptions = { weekday: 'long', month: 'long', day: 'numeric' };
+            datetimeElement.innerHTML = `${now.toLocaleDateString('en-US', dateOptions)}<br>${now.toLocaleTimeString('en-US')}`;
+        };
+        setInterval(updateDateTime, 1000);
+        updateDateTime();
+
+        // Quote slider
+        const quotes = ["The important thing is not to stop questioning.", "Look deep into nature, and you will understand everything better.", "The science of today is the technology of tomorrow."];
+        let currentQuoteIndex = 0;
+        const changeQuote = () => {
+            quoteTextElement.classList.add('fade-out');
+            setTimeout(() => {
+                currentQuoteIndex = (currentQuoteIndex + 1) % quotes.length;
+                quoteTextElement.textContent = quotes[currentQuoteIndex];
+                quoteTextElement.classList.remove('fade-out');
+            }, 500);
+        };
+        setInterval(changeQuote, 7000);
+        changeQuote();
+    });
+    </script>
 </body>
 </html>
