--- a/sem2.html
+++ b/sem2.html
@@ -256,7 +256,7 @@
     <a href="index.html" class="back-link-top-left">← Back</a>
 
     <header>
-        <h1>Mid-semester Assignment</h1>
+        <h1>Pre-semester Assignment</h1>
         <p>(Core – 3)</p>
     </header>
 
