--- a/sem2.html
+++ b/sem2.html
@@ -109,7 +109,7 @@
         <a href="index.html" class="back-button"><i class="fas fa-arrow-left"></i> Back to Home</a>
         
       <div class="subject-grid">
-    <a href="major3_notes.html" class="subject-box">
+    <a href="major3.html" class="subject-box">
         <div>
             <h2>Major 3: Mechanical Physics</h2>
             <p>Notes, problems, and resources for Mechanical Physics.</p>
@@ -117,7 +117,7 @@
         <i class="fas fa-wave-square icon"></i>
     </a>
 
-    <a href="major4_notes.html" class="subject-box">
+    <a href="major4.html" class="subject-box">
         <div>
             <h2>Major 4: Mathematical Physics</h2>
             <p>Notes, problems, and resources for Mathematical physics</p>
@@ -125,28 +125,28 @@
         <i class="fas fa-bolt icon"></i>
     </a>
 
-    <a href="minor2_notes.html" class="subject-box">
+    <a href="minor2.html" class="subject-box">
         <div>
             <h2>Minor 2: Comp. Sc , Chemistry </h2>
             <p>Computer networks, algorithms, Chemical reactions, & compounds derivatives </p>
         </div>
         <i class="fas fa-calculator icon"></i>
     </a>
-    <a href="english_notes.html" class="subject-box">
+    <a href="english.html" class="subject-box">
         <div>
             <h2>English Communication</h2>
             <p>Notes on academic and technical writing skills.</p>
         </div>
         <i class="fas fa-language icon"></i>
     </a>
-    <a href="iks_notes.html" class="subject-box">
+    <a href="iks.html" class="subject-box">
         <div>
             <h2>Indian Knowledge System (IKS)</h2>
             <p>Exploring traditional scientific heritage.</p>
         </div>
         <i class="fas fa-om icon"></i>
     </a>
-   <a href="re-eh_notes.html" class="subject-box">
+   <a href="re-eh.html" class="subject-box">
     <div>
         <h2>Renewable Energy & Energy Harvesting</h2>
         <p>Study of sustainable energy sources and advanced harvesting techniques.</p>
