--- a/core_3.sem_2.html
+++ b/core_3.sem_2.html
@@ -253,7 +253,7 @@
 <body>
 
     <!-- BACK TO HOME LINK (TOP-LEFT) -->
-    <a href="index.html" class="back-link-top-left">← Back</a>
+    <a href="major3.html" class="back-link-top-left">← Back</a>
 
     <header>
         <h1>Pre-semester Assignment</h1>
