--- a/major3.html
+++ b/major3.html
@@ -73,7 +73,7 @@
 
     <header>
         <div class="header-content">
-            <h1>Core III: Electricity & Magnetism</h1>
+            <h1>Major III: Electricity & Magnetism</h1>
             <div class="header-controls">
                 <div id="datetime" class="datetime"></div>
                 <div class="theme-switcher">
