--- a/sem2.html
+++ b/sem2.html
@@ -111,7 +111,7 @@
       <div class="subject-grid">
     <a href="major3.html" class="subject-box">
         <div>
-            <h2>Major 3: Mechanical Physics</h2>
+            <h2>Major 3: Ellectricity & Magnetism </h2>
             <p>Notes, problems, and resources for Mechanical Physics.</p>
         </div>
         <i class="fas fa-wave-square icon"></i>
