--- a/major3.html
+++ b/major3.html
@@ -71,7 +71,21 @@
         .back-button { display: inline-flex; align-items: center; gap: 0.5rem; text-decoration: none; background-color: var(--back-btn-bg); color: var(--back-btn-color); padding: 0.5rem 1rem; border-radius: 8px; font-weight: 400; transition: all 0.2s ease; margin-bottom: 2rem; }
         .back-button:hover { background-color: var(--primary-accent); color: white; transform: translateY(-2px); box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
         .unit-accordion { display: flex; flex-direction: column; gap: 1rem; }
-        .unit-header { cursor: pointer; display: flex; justify-content: space-between; align-items: center; padding: 1rem 1.5rem; background-color: var(--card-bg); border: 1px solid var(--border-color); border-radius: 10px; transition: all 0.3s ease; box-shadow: 0 2px 8px var(--shadow-color); width: 100%; text-align: left; }
+        .unit-header {
+            cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            /* MODIFIED: Changed to 4-value padding to increase right padding for better visual alignment of the icon, moving it slightly to the left. */
+            padding: 1rem 1.75rem 1rem 1.5rem;
+            background-color: var(--card-bg);
+            border: 1px solid var(--border-color);
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px var(--shadow-color);
+            width: 100%;
+            text-align: left;
+        }
         .unit-header:hover, .unit-header.active { border-color: var(--primary-accent); background-color: var(--accordion-active-bg); }
         .unit-header h2 { margin: 0; font-size: 1.2rem; color: var(--text-primary); }
         .unit-header .icon { font-size: 1.2rem; color: var(--text-secondary); transition: transform 0.3s ease; }
