--- a/major3.html
+++ b/major3.html
@@ -156,7 +156,7 @@
             <div class="unit-box">
                 <div class="unit-header"><h2>Unit 1: Electric Field and Electric Potential</h2><i class="fas fa-chevron-down icon"></i></div>
                 <div class="unit-content"><div class="unit-content-inner"><ul>
-                    <li><a href="core3_unit1_topic1.html">Electric Field, Flux & Gauss's Law</a></li>
+                    <li><a href="major3_unit1_topic1.html">Electric Field, Flux & Gauss's Law</a></li>
                     <li><a href="core3_unit1_topic2.html">Electrostatic Potential & Dipoles</a></li>
                     <li><a href="core3_unit1_topic3.html">Laplace, Poisson & Uniqueness Theorem</a></li>
                     <li><a href="core3_unit1_topic4.html">Method of Images</a></li>
