--- a/major3.html
+++ b/major3.html
@@ -194,6 +194,7 @@
 
         <div class="assessment-card">
             <h3>Course & Assessment Structure</h3>
+            <h4>Pre-Sem (Sem-2) </h4>
             <div class="assessment-content">
                 <div class="assessment-info">
                     <p>This course covers the fundamental principles of Electricity and Magnetism. All units from the syllabus above are included in the final assessment.</p>
